fix: 배포 환경 CORS 오류 해결을 위한 설정 수정