@@ -2,7 +2,6 @@ package com.windfall.global.config;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -23,16 +22,18 @@ public class WebConfig {
     List<String> origins = Arrays.stream(allowedOrigins.split(","))
         .map(String::trim)
         .filter(s -> !s.isBlank())
-        .collect(Collectors.toList());
+        .toList();
 
-    config.setAllowedOrigins(origins);
+    // 핵심: allowedOrigins -> allowedOriginPatterns
+    config.setAllowedOriginPatterns(origins);
+
     config.setAllowedMethods(List.of("GET","POST","PUT","DELETE","PATCH","OPTIONS"));
     config.setAllowedHeaders(List.of("*"));
-//    config.setExposedHeaders(List.of("Authorization"));
     config.setAllowCredentials(true);
 
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     source.registerCorsConfiguration("/**", config);
     return source;
   }
+
 }
